--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,8 @@
         </tr>
         {% endfor %}
     </table>
+    <a href="{{ url_for('add_student') }}">Add Student</a> 
+
     <h3>Quizzes</h3>
     <table>
         <tr>
